# GFDL_MISC_MZ

./: .gitignore  README.md
src/: CMakeLists.txt
src/c_src/: CMakeLists.txt  search.h  test_bbox  test_bbox.c
src/config/fortls/: .fortls
src/config/vscode_fms/: c_cpp_properties.json  launch.json  settings.json  tasks.json
src/config/vscode_nct/: launch.json  settings.json
src/cpp_execs/: CMakeLists.txt  fv3_regll_gen.cpp  pass_array.C  restarts_fcom_gen.cpp
src/cpp_src/: CMakeLists.txt  daxpy.cpp  par_sqrt.cpp  par_trans.cpp  restarts_fcom_gen.cpp  stdpartest.C  test_mdspan.C
src/cpp_src/save/: stdpartest.C
src/fortran_execs/: CMakeLists.txt  compute_all.F90  compute_func.F90  compute_r4.F90  compute_r8.F90  fms_diag_dlinked_list.F90  fms_diag_dlinked_list_mod.mod  platform_mod.F90  send_data_i_mod.F90  send_data_mod.F90  send_data_r4.F90  send_data_r_mod.F90  sendf_i4_mod.F90  sendf_i8_mod.F90  sendf_int.F90  sendf_mod.F90  sendf_r4_mod.F90  sendf_r8_mod.F90  test_compute.F90  test_diag_dlinked_list.F90  test_elemental_weighting_procs.F90  test_send_dat.F90  test_send_data.F90
src/fortran_src/: CMakeLists.txt  fms_diag_dlinked_list.F90  send_data_mod.F90  sendf_real.F90  test_diag_dlinked_list.F90  test_not.F90  test_rankremap.F90  test_return.F90  test_send_data.F90  test_sendf.F90  time_pow_function.F90
src/jupyter_nbs/: esmpy_cons_v3.ipynb  esmpy_tuto_funcs.ipynb  esmpy_vs_nctools_cr_v3.ipynb  nct_vs_xesmf1.ipynb  nct_vs_xesmf_2.ipynb  xesmf_vs_nctools_cr_v2.ipynb
src/python/: combine.py  dircomp.py  dircompnc.py  polydis2D.py  polydis3D.py  polydisp1.py  polydisp2.py  rdircompnc.py
src/scripts/: gen_from_generic.sh  input_file.F90  regrid_cube_to_ll.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestCommon/: check_o1.sh  check_o2.sh  fregrid_gpu_test_util.sh  fregrid_mkrfile.sh  fregrid_mkrfile_gg_o1.sh  fregrid_mkrfile_gr.sh  fregrid_mkrfile_gr_o1.sh  make_ged_mosaic.sh  make_rll_mosaic.sh  make_tripolar_mosaic.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestGG/: check.sh  fregrid_mkrfile_gg_small.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestGGO1/: check.sh  go.sh  make_ged_mosaic.sh  make_geds_n.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestGR/: check.sh  fregrid_mkrfile_gr_common.sh  make_ged_common.sh  make_rll_small.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestGRO1/: check.sh  go.sh  make_rll_mosaic.sh  make_rll_small.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestRR/: check.sh  fregrid_mkrfile_rr.sh  go.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestScaleOrd2/: check.sh  fregrid_mkrfile_gg_n.sh  fregrid_mkrfile_gr_n.sh  fregrid_mkrfile_gr_n_2.sh  go.sh  make_geds_n.sh  make_rlls_n.sh
src/scripts/fregrid_tests/cppfregrid_tests/TestTPR/: check.sh  fregrid_mkrfile_tpr_small.sh  go.sh
src/scripts/fregrid_tests/fregrid_gpu_test/: README.txt  fregrid_mkrfile_gg.sh  fregrid_mkrfile_tpr.sh
src/scripts/fregrid_tests/gfdl_horiz_remap/: README.txt  fregrid_gg_s.sh  fregrid_gr_s.sh  go.sh  make_geds.sh  make_remap_file.sh  nvhpc.mk  nvhpc_mz_gpu_fast.mk  nvhpc_mz_mc.mk
src/scripts/nctools_gpu_tests/cppfregrid_tests/: README.txt
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestCommon/: fregrid_mkrfile_gg.sh  generate_all.sh  test_utils.bash
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestGG/: check.sh  go.sh  make_ged_common.sh  make_ged_small.sh
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestGR/: fregrid_mkrfile_gr_small.sh  go.sh  go_nsys.sh  make_rll_common.sh
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestRR/: go.sh  make_rll_common.sh
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestScaleOrd2/: make_rlls_n.sh
src/scripts/nctools_gpu_tests/cppfregrid_tests/TestTPR/: fregrid_mkrfile_tpr.sh  go.sh
src/scripts/nctools_gpu_tests/fregrid_gpu_test/: fregrid_gpu_test_util.sh  fregrid_mkrfile.sh  fregrid_mkrfile_gg.sh  fregrid_mkrfile_gg_common.sh  fregrid_mkrfile_gg_n.sh  fregrid_mkrfile_gg_small.sh  fregrid_mkrfile_gr.sh  fregrid_mkrfile_gr_common.sh  fregrid_mkrfile_gr_n.sh  fregrid_mkrfile_tpr.sh  make_ged_common.sh  make_ged_mosaic.sh  make_ged_small.sh  make_rll_mosaic.sh  make_rll_small.sh  make_rlls_n.sh  make_tripolar_mosaic.sh  nvhpc_home.mk
src/scripts/nctools_gpu_tests/gfdl_horiz_remap/: README.txt  fregrid_gg.sh  fregrid_gr.sh  fregrid_gr_mpi.sh  fregrid_gr_mpi_s.sh  make_ged_mosaic.sh  make_remap_files.sh  nvhpc_mz_1c.mk  nvhpc_mz_gpuO2.mk  set_path.sh
