

#add_executable(restarts_fcom_gen.x restarts_fcom_gen.cpp)

#target_link_libraries(restarts_fcom_gen.x netcdf-cxx4)

#add_executable(fv3_regll_gen.x fv3_regll_gen.cpp)

#target_link_libraries(fv3_regll_gen.x netcdf-cxx4)

add_executable(pass_array.x pass_array.C)

add_executable(stdpartest.x stdpartest.C)






